# CargoFlow

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  docker-compose.yml  init.sh  manage.py  pyproject.toml  readme.md  requirements.txt
cargo/: admin.py  apps.py  forms.py  urls.py
cargo/models/: __init__.py  bol.py  container.py  container_status.py  delivery_order.py  manifest.py  vendor.py
cargo/templates/cargo/: bol.html  bol_list.html  container_list.html  container_report.html  container_status.html  delivery_order.html  delivery_order_list.html  (+2 more)
cargo/views/: bol.py  container.py  delivery_order.py  manifest.py  vendor.py
operations/: admin.py  admin_site.py  forms.py  models.py  urls.py  views.py
operations/migrations/: 0001_initial.py  0002_cargo_color_container_on_port_alter_cargo_container_and_more.py  0002_remove_service_service_type_service_service_type.py
rms/: asgi.py  settings.py  urls.py  wsgi.py
shipping/: admin.py  admin_site.py  forms.py  models.py  urls.py  views.py
shipping/admin/: custom_admin.css
shipping/models/: __init__.py  bol.py  cargo.py  company.py  consignee.py  container.py  delivery_order.py  loose_cargo.py  manifest.py  port_handling.py  service.py  service_type.py  shipper.py  sof.py  vessel.py  voyage.py
shipping/views/: auth.py  company.py  consignee.py  container.py  index.py  service.py  service_type.py  shipper.py  sof.py  vessel.py  voyage.py
users/: admin.py  constants.py  forms.py  managers.py  models.py  signals.py  tests.py
utils/: create_pdf.py
(+44 files in other folders)
