[tool.poetry]
name = "rms-port"
version = "0.1.0"
description = "Port management"
authors = ["progmatic-99 <shubham.upreti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "3.6.0"
Django = "4.2"
Faker = "18.6.0"
Pillow = "9.5.0"
python-dateutil = "2.8.2"
reportlab = "3.6.13"
six = "1.16.0"
sqlparse = "0.4.4"
django-cors-headers = "^3.14.0"
pre-commit = "^3.3.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
