[tool.poetry]
name = "rms-port"
version = "0.1.0"
description = "Port management"
authors = ["progmatic-99 <shubham.upreti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "3.6.0"
Django = "4.2"
Pillow = "9.5.0"
python-dateutil = "2.8.2"
reportlab = "3.6.13"
six = "1.16.0"
sqlparse = "0.4.4"
django-cors-headers = "^3.14.0"
pre-commit = "^3.3.1"
pytz = "^2023.3"
django-widget-tweaks = "^1.4.12"
django-extensions = "^3.2.3"
weasyprint = "^59.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
